methods.slug.SlugTracking.scala.error
Erreur de compilation :
SlugTracking:26: error: Unmatched closing brace '}' ignored here
}
^